cmake_minimum_required(VERSION 3.25)
project(2023_09_21)

set(CMAKE_CXX_STANDARD 14)

include_directories(CORE)
include_directories(OBJ)
include_directories(STM32F10x_FWlib/inc)
include_directories(USER)

add_executable(2023_09_21
        .idea/.gitignore
        .idea/workspace.xml
        CORE/core_cm3.c
        CORE/core_cm3.h
        CORE/startup_stm32f10x_hd.s
        OBJ/DebugConfig/Target_1_STM32F103RC_1.0.0.dbgconf
        OBJ/Listings/startup_stm32f10x_hd.lst
        OBJ/Listings/STM.map
        OBJ/Objects/core_cm3.crf
        OBJ/Objects/core_cm3.d
        OBJ/Objects/core_cm3.o
        OBJ/Objects/delay.crf
        OBJ/Objects/delay.d
        OBJ/Objects/delay.o
        OBJ/Objects/key.crf
        OBJ/Objects/key.d
        OBJ/Objects/key.o
        OBJ/Objects/led.crf
        OBJ/Objects/led.d
        OBJ/Objects/led.o
        OBJ/Objects/main.crf
        OBJ/Objects/main.d
        OBJ/Objects/main.o
        OBJ/Objects/misc.crf
        OBJ/Objects/misc.d
        OBJ/Objects/misc.o
        OBJ/Objects/startup_stm32f10x_hd.d
        OBJ/Objects/startup_stm32f10x_hd.o
        OBJ/Objects/STM.axf
        OBJ/Objects/STM.build_log.htm
        OBJ/Objects/STM.hex
        OBJ/Objects/STM.htm
        OBJ/Objects/STM.lnp
        OBJ/Objects/STM.sct
        OBJ/Objects/stm32f10x_adc.crf
        OBJ/Objects/stm32f10x_adc.d
        OBJ/Objects/stm32f10x_adc.o
        OBJ/Objects/stm32f10x_bkp.crf
        OBJ/Objects/stm32f10x_bkp.d
        OBJ/Objects/stm32f10x_bkp.o
        OBJ/Objects/stm32f10x_can.crf
        OBJ/Objects/stm32f10x_can.d
        OBJ/Objects/stm32f10x_can.o
        OBJ/Objects/stm32f10x_cec.crf
        OBJ/Objects/stm32f10x_cec.d
        OBJ/Objects/stm32f10x_cec.o
        OBJ/Objects/stm32f10x_crc.crf
        OBJ/Objects/stm32f10x_crc.d
        OBJ/Objects/stm32f10x_crc.o
        OBJ/Objects/stm32f10x_dac.crf
        OBJ/Objects/stm32f10x_dac.d
        OBJ/Objects/stm32f10x_dac.o
        OBJ/Objects/stm32f10x_dbgmcu.crf
        OBJ/Objects/stm32f10x_dbgmcu.d
        OBJ/Objects/stm32f10x_dbgmcu.o
        OBJ/Objects/stm32f10x_dma.crf
        OBJ/Objects/stm32f10x_dma.d
        OBJ/Objects/stm32f10x_dma.o
        OBJ/Objects/stm32f10x_exti.crf
        OBJ/Objects/stm32f10x_exti.d
        OBJ/Objects/stm32f10x_exti.o
        OBJ/Objects/stm32f10x_flash.crf
        OBJ/Objects/stm32f10x_flash.d
        OBJ/Objects/stm32f10x_flash.o
        OBJ/Objects/stm32f10x_fsmc.crf
        OBJ/Objects/stm32f10x_fsmc.d
        OBJ/Objects/stm32f10x_fsmc.o
        OBJ/Objects/stm32f10x_gpio.crf
        OBJ/Objects/stm32f10x_gpio.d
        OBJ/Objects/stm32f10x_gpio.o
        OBJ/Objects/stm32f10x_i2c.crf
        OBJ/Objects/stm32f10x_i2c.d
        OBJ/Objects/stm32f10x_i2c.o
        OBJ/Objects/stm32f10x_it.crf
        OBJ/Objects/stm32f10x_it.d
        OBJ/Objects/stm32f10x_it.o
        OBJ/Objects/stm32f10x_iwdg.crf
        OBJ/Objects/stm32f10x_iwdg.d
        OBJ/Objects/stm32f10x_iwdg.o
        OBJ/Objects/stm32f10x_pwr.crf
        OBJ/Objects/stm32f10x_pwr.d
        OBJ/Objects/stm32f10x_pwr.o
        OBJ/Objects/stm32f10x_rcc.crf
        OBJ/Objects/stm32f10x_rcc.d
        OBJ/Objects/stm32f10x_rcc.o
        OBJ/Objects/stm32f10x_rtc.crf
        OBJ/Objects/stm32f10x_rtc.d
        OBJ/Objects/stm32f10x_rtc.o
        OBJ/Objects/stm32f10x_sdio.crf
        OBJ/Objects/stm32f10x_sdio.d
        OBJ/Objects/stm32f10x_sdio.o
        OBJ/Objects/stm32f10x_spi.crf
        OBJ/Objects/stm32f10x_spi.d
        OBJ/Objects/stm32f10x_spi.o
        OBJ/Objects/stm32f10x_tim.crf
        OBJ/Objects/stm32f10x_tim.d
        OBJ/Objects/stm32f10x_tim.o
        OBJ/Objects/stm32f10x_usart.crf
        OBJ/Objects/stm32f10x_usart.d
        OBJ/Objects/stm32f10x_usart.o
        OBJ/Objects/stm32f10x_wwdg.crf
        OBJ/Objects/stm32f10x_wwdg.d
        OBJ/Objects/stm32f10x_wwdg.o
        "OBJ/Objects/STM_Target 1.dep"
        OBJ/Objects/system_stm32f10x.crf
        OBJ/Objects/system_stm32f10x.d
        OBJ/Objects/system_stm32f10x.o
        OBJ/Objects/time.crf
        OBJ/Objects/time.d
        OBJ/Objects/time.o
        OBJ/main.c
        OBJ/STM.uvguix.Admin
        OBJ/STM.uvoptx
        OBJ/STM.uvprojx
        OBJ/stm32f10x.h
        OBJ/stm32f10x_conf.h
        OBJ/stm32f10x_it.c
        OBJ/stm32f10x_it.h
        OBJ/system_stm32f10x.c
        OBJ/system_stm32f10x.h
        STM32F10x_FWlib/inc/misc.h
        STM32F10x_FWlib/inc/stm32f10x_adc.h
        STM32F10x_FWlib/inc/stm32f10x_bkp.h
        STM32F10x_FWlib/inc/stm32f10x_can.h
        STM32F10x_FWlib/inc/stm32f10x_cec.h
        STM32F10x_FWlib/inc/stm32f10x_crc.h
        STM32F10x_FWlib/inc/stm32f10x_dac.h
        STM32F10x_FWlib/inc/stm32f10x_dbgmcu.h
        STM32F10x_FWlib/inc/stm32f10x_dma.h
        STM32F10x_FWlib/inc/stm32f10x_exti.h
        STM32F10x_FWlib/inc/stm32f10x_flash.h
        STM32F10x_FWlib/inc/stm32f10x_fsmc.h
        STM32F10x_FWlib/inc/stm32f10x_gpio.h
        STM32F10x_FWlib/inc/stm32f10x_i2c.h
        STM32F10x_FWlib/inc/stm32f10x_iwdg.h
        STM32F10x_FWlib/inc/stm32f10x_pwr.h
        STM32F10x_FWlib/inc/stm32f10x_rcc.h
        STM32F10x_FWlib/inc/stm32f10x_rtc.h
        STM32F10x_FWlib/inc/stm32f10x_sdio.h
        STM32F10x_FWlib/inc/stm32f10x_spi.h
        STM32F10x_FWlib/inc/stm32f10x_tim.h
        STM32F10x_FWlib/inc/stm32f10x_usart.h
        STM32F10x_FWlib/inc/stm32f10x_wwdg.h
        STM32F10x_FWlib/src/misc.c
        STM32F10x_FWlib/src/stm32f10x_adc.c
        STM32F10x_FWlib/src/stm32f10x_bkp.c
        STM32F10x_FWlib/src/stm32f10x_can.c
        STM32F10x_FWlib/src/stm32f10x_cec.c
        STM32F10x_FWlib/src/stm32f10x_crc.c
        STM32F10x_FWlib/src/stm32f10x_dac.c
        STM32F10x_FWlib/src/stm32f10x_dbgmcu.c
        STM32F10x_FWlib/src/stm32f10x_dma.c
        STM32F10x_FWlib/src/stm32f10x_exti.c
        STM32F10x_FWlib/src/stm32f10x_flash.c
        STM32F10x_FWlib/src/stm32f10x_fsmc.c
        STM32F10x_FWlib/src/stm32f10x_gpio.c
        STM32F10x_FWlib/src/stm32f10x_i2c.c
        STM32F10x_FWlib/src/stm32f10x_iwdg.c
        STM32F10x_FWlib/src/stm32f10x_pwr.c
        STM32F10x_FWlib/src/stm32f10x_rcc.c
        STM32F10x_FWlib/src/stm32f10x_rtc.c
        STM32F10x_FWlib/src/stm32f10x_sdio.c
        STM32F10x_FWlib/src/stm32f10x_spi.c
        STM32F10x_FWlib/src/stm32f10x_tim.c
        STM32F10x_FWlib/src/stm32f10x_usart.c
        STM32F10x_FWlib/src/stm32f10x_wwdg.c
        USER/Delay.c
        USER/Delay.h
        USER/include.h
        USER/Key.c
        USER/Key.h
        USER/LED.c
        USER/LED.H
        USER/Time.c
        USER/Time.h)
